--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Marqdouj.DotNet.Web.Components.FluentUI.csproj
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Marqdouj.DotNet.Web.Components.FluentUI.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <PackageIcon>DMNuGet.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <Version>10.0.0-Preview4.1</Version>
+    <Version>10.0.0-Preview6.0</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>C# Components, classes, and Extensions for FluentUI web-based projects</Title>
     <PackageProjectUrl>https://github.com/Marqdouj/DotNet.Web.Components.FluentUI</PackageProjectUrl>
@@ -16,6 +16,7 @@
     <Authors>Douglas Marquardt</Authors>
     <Copyright>© Douglas Marquardt. All rights reserved.</Copyright>
     <Description>C# components, classes, and extensions I find useful in my .NET FluentUI web-based projects</Description>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
