Update NuGet pkgs

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Marqdouj.DotNet.Web.Components.FluentUI.csproj
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Marqdouj.DotNet.Web.Components.FluentUI.csproj
@@ -36,9 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Marqdouj.DotNet.General" Version="10.0.0-Preview3.1" />
-    <PackageReference Include="Marqdouj.DotNet.Web.Components" Version="10.0.0-Preview" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.1.25451.107" />
+    <PackageReference Include="Marqdouj.DotNet.General" Version="10.0.0-Preview3.3" />
+    <PackageReference Include="Marqdouj.DotNet.Web.Components" Version="10.0.0-Preview-3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.2.25502.107" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.13.0" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.13.0" />
   </ItemGroup>
